deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skill-web
spec:
  selector:
    app: skill-web
  ports:
  - name: http
    port: 80
    targetPort: http
